@@ -554,13 +554,13 @@ void SceneNode::SetAABoundingBox(const AABoundingBox &cAABoundingBox)
 	// Set new axis align bounding box
 	m_cAABoundingBox = cAABoundingBox;
 
-	// We have to recalculate the current axis align bounding box in 'scene container space'
+	// We have to recalculate the current axis align bounding box in 'scene container space' because this data is derived from the axis align bounding box
 	m_nInternalFlags |= RecalculateContainerAABoundingBox;
 
-	// We have to recalculate the bounding sphere in 'sphere node space'
+	// We have to recalculate the bounding sphere in 'sphere node space' because this data is derived from the axis align bounding box
 	m_nInternalFlags |= RecalculateBoundingSphere;
 
-	// We have to recalculate the current bounding sphere in 'sphere container space'
+	// We have to recalculate the current bounding sphere in 'sphere container space' because this data is derived from the axis align bounding box
 	m_nInternalFlags |= RecalculateContainerBoundingSphere;
 
 	// We need a hierarchy refresh for this scene node
