@@ -18,6 +18,7 @@ Changes in PixelLight 0.9.5-R1 (not yet released)
 - Bugfix: "PLGraphics::IEScale" was not always working correctly
 - Bugfix: "PLPhysics::SNMPhysicsCharacterController" rotation was broken in "PixelLight 0.9.4-R1"
 - Bugfix: "PLGraphics::ImageLoaderJPG": Saving a given RGBA image was not working
+- Bugfix: "PLScene::SceneNode::DirtyAABoundingBox()" was buggy, this caused e.g. particle effects to be "culled to early"
 
 
 Changes in PixelLight 0.9.4-R1 (released on December 23, 2010)
